lang/macro/tests/ui/contract/fail/07-missing-storage-struct.rs
use liquid_lang as liquid;

#[liquid::contract(version = "0.2.0")]
mod noop {}

fn main() {}
